# pretorin-cli

./: CHANGELOG.md  README.md  REPORT.md  pyproject.toml  server.json
.github/workflows/: publish.yml  test.yml
docs/: CLI.md  MCP.md
pretorin-skill/: SKILL.md
scripts/: check.sh  demo-walkthrough.sh
src/pretorin/: __init__.py
src/pretorin/agent/: codex_agent.py  codex_runtime.py  runner.py  skills.py  tools.py
src/pretorin/cli/: agent.py  commands.py  context.py  control.py  evidence.py  main.py  monitoring.py  narrative.py  notes.py  review.py
src/pretorin/client/: api.py  models.py
src/pretorin/evidence/: sync.py  writer.py
src/pretorin/mcp/: analysis_prompts.py  helpers.py  resources.py  server.py  tools.py
src/pretorin/mcp/handlers/: __init__.py  compliance.py  evidence.py  frameworks.py  systems.py
src/pretorin/mcp/prompts/: __init__.py  control_prompts.py  framework_guides.py  schema.py
src/pretorin/workflows/: __init__.py  ai_generation.py  compliance_updates.py  markdown_quality.py
tests/: test_agent_cli.py  test_agent_runner_coverage.py  test_agent_tools_coverage.py  test_analysis_prompts.py  test_animations_coverage2.py  test_api_client.py  test_api_client_coverage2.py  test_cli_auth_coverage2.py  test_cli_context_coverage2.py  test_cli_control_coverage.py  test_cli_evidence_link_coverage.py  test_codex_agent.py  test_codex_runtime.py  test_compliance_cli_commands.py  test_compliance_updates.py  test_compliance_updates_coverage.py  test_control_id_normalization.py  test_evidence_sync.py  test_evidence_sync_coverage.py  test_evidence_writer_coverage.py  test_harness_coverage2.py  test_main_entry.py  test_markdown_quality.py  test_mcp_compliance_coverage.py  test_mcp_compliance_coverage2.py  test_mcp_config_coverage2.py  test_mcp_evidence_coverage.py  test_mcp_server_coverage.py  test_mcp_systems_coverage.py  test_mcp_tools_expanded.py  test_models.py  test_small_coverage_gaps.py  test_version_check_coverage.py
